# ragbee_fw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cli.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
example/: eng_doc_&_example.ipynb  rus_doc_&_example.ipynb  simple_RAG_example_BM25.ipynb
src/ragbee_fw/: __init__.py
src/ragbee_fw/core/ports/: data_loader_port.py  llm_port.py  retriever_port.py  splitter_port.py
src/ragbee_fw/core/services/: answer_service.py  ingestion_service.py
src/ragbee_fw/infrastructure/data_loader/: file_loader.py
src/ragbee_fw/infrastructure/di_conteiner/: di_conteiner.py
src/ragbee_fw/infrastructure/llm_clients/: huggingface_client.py
src/ragbee_fw/infrastructure/retriever/: bm25_client.py
src/ragbee_fw/infrastructure/text_splitter/: recursive_text_splitter.py
src/ragbee_fw/llm_clients/: huggingface_client.py
