[project]
name = "ragbee-fw"
version = "0.1.0"
description = ""
authors = [
    {name = "shevchenko v.a."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub (>=0.31.1,<0.32.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "typer (>=0.15.4,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"

